# pwn-engine

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  ProjectHome.md  astyle.py  cleanfiles.py  cmakegen.py  components.gv  convert-args.txt  dependencies.txt  doc.bat  doxygen  event-system-design.cpp  history.txt  mesh-api.cpp  open-exr-license.txt  pwn-todo.txt  readme.md  run-clang-format.sh  short-term-goals.txt  todo.txt  vs-arguments.txt
cmake-modules/: -FindSFML.cmake  FindGoogleMock.cmake  FindGoogleMock2.cmake  FindPhysFS.cmake  FindPhysFS2.cmake
graveyard/: mousefilter  mousefilter.cpp  readme.txt
inc/: config.in.h  noncopyable.h
inc/gtest/: gtest.h
inc/pwn/: assert  assert.h  doxygen-pages  doxygen-pages.h  number  number.h  sfml-config.h  string.h
inc/pwn/component/: component.h  component_inc.cmake  componentdef.h  componentstd.h  engine.h  eventargs.h  object.h  objectdef.h  property.h  propertydef.h  propertystd.h  world.h  worlddef.h
inc/pwn/core/: CMakeLists.txt  Str.h  StringSeperator.h  StringUtils  StringUtils.h  config.h  consolearguments.h  core_inc.cmake  enum.h  idpool  idpool.h  map.h  pool.h  sarray  stdutil  stdutil.h  str.h  string  stringutils.h  vec.h  vector.h
inc/pwn/engine/: CMakeLists.txt  autolink  democamera  democamera.h  democontrols.h  demomovement.h  engine_inc.cmake  game  game.h  key  key.h  loop  loop.h  startup.h  vfstexturepool2.h  videomode.h
src/: CMakeLists.txt  test-main.cpp
src/assert/: CMakeLists.txt  assert.cpp  assert_src.cmake
src/component/: CMakeLists.txt  component.cpp  component_src.cmake  componentdef.cpp  componentstd.cpp  engine.cpp  eventargs.cpp  object.cpp  objectdef.cpp  property.cpp  propertydef.cpp  propertystd.cpp  world.cpp  worlddef.cpp
src/convert/: 3ds.cpp  3ds.hpp  An8.cpp  An8.hpp  CMakeLists.txt  Converter.cpp  Converter.hpp  MilkshapeAscii.cpp  MilkshapeAscii.hpp  MilkshapeBinary.cpp  MilkshapeBinary.hpp  MilkshapeCommon.cpp  MilkshapeCommon.hpp  WavefrontObj.cpp  WavefrontObj.hpp  Writer.cpp  Writer.hpp  convert.cpp  convert.hpp  convert_src.cmake  inputformat.cpp  inputformat.hpp
src/core/: CMakeLists.txt  StringUtils.cpp
src/core/src/: CMakeLists.in.txt  CMakeLists.txt  StringUtils.cpp  core_src.cmake  enum.cpp  idpool.cpp
src/core/test/: CMakeLists.in.txt  CMakeLists.txt  TestEnum.cpp  TestStdUtil.cpp  TestStringUtils.cpp  VectorTest.cpp  core_test.cmake  idpooltest.cpp  main.cpp
src/demos/: CMakeLists.txt
src/demos/aim-at-camera/: CMakeLists.txt  demo-aim-at-camera.cpp  demo_aim_at_camera_src.cmake
src/demos/aim-at-object/: CMakeLists.txt  demo-aim-at-object.cpp  demo_aim_at_object_src.cmake
src/engine/: CMakeLists.txt  democamera.cpp  democontrols.cpp  demomovement.cpp  display.cpp  display.hpp  engine_src.cmake  game.cpp  game_install.cpp  gameimp.cpp  gameimp.hpp  key.cpp  keys.cpp  loop.cpp  loop.hpp  startup.cpp  system.cpp  system.hpp  system_render.cpp  system_render.hpp  system_vfs.cpp  system_vfs.hpp  system_window.cpp  system_window.hpp  vfs_util.cpp  vfs_util.hpp  vfstexturepool2.cpp  videomode.cpp  videomode.hpp
src/engine/src/: CMakeLists.in.txt  CMakeLists.txt  engine_src.cmake  game.cpp  game_install.cpp  gameimp.hpp  key.cpp  loop.hpp  system.hpp  system_render.hpp  system_vfs.cpp  system_vfs.hpp  vfs_util.cpp  vfstexturepool2.cpp
src/game/: CMakeLists.txt  game.cpp  game_src.cmake  main.cpp
src/io/: CMakeLists.txt  animation-writer.cpp  config.cpp  io_src.cmake  mesh-writer.cpp  vfs.cpp  vfs.hpp
src/io/src/: CMakeLists.in.txt  CMakeLists.txt  animation-writer.cpp  config.cpp  io_src.cmake  vfs.hpp
src/math/: CMakeLists.txt  readme.txt
src/math/src/: CMakeLists.in.txt  CMakeLists.txt  angle.cpp  angleop.cpp  axisangle.cpp  direction2.cpp  direction3.cpp  mat33.cpp  mat44.cpp  math.cpp  math_src.cmake  point2.cpp  point3.cpp  pointdir2.cpp  quat.cpp  rect.cpp  rectop.cpp  rgb.cpp  rgba.cpp  scraps.cpp  vec2.cpp  vec2op.cpp  vec3.cpp  vec3op.cpp
src/math/test/: CMakeLists.in.txt  CMakeLists.txt  TestAngle.cpp  TestBase.cpp  TestBase.h  TestMat33.cpp  TestMat44.cpp  TestMath1.cpp  TestQuat.cpp  TestRect.cpp  TestVec2.cpp  TestVec3.cpp  main.cpp  math_test.cmake
src/mesh/: CMakeLists.txt  animation.cpp  bone.cpp  builder.cpp  material.cpp  mesh.cpp  triangle.cpp
src/mesh/src/: CMakeLists.in.txt  CMakeLists.txt  animation.cpp  bone.cpp  builder.cpp  material.cpp  mesh.cpp  mesh_src.cmake  triangle.cpp
src/mesh/test/: CMakeLists.in.txt  CMakeLists.txt  mesh_test.cmake  test-mesh.cpp
src/meshdebug/: CMakeLists.txt  meshdebug.cpp  meshdebug_src.cmake
src/meshio/: animation-writer.cpp  compress-internal.h  compress.cpp  mesh-writer.cpp  vfs.cpp  vfs.h  vfs.hpp  writer.cpp
src/render/: CMakeLists.txt  actor.cpp  actordef.cpp  compiledcamera.cpp  compiledmesh.cpp  material.cpp  part.cpp  renderlist.cpp  rgba.cpp  texture2.cpp  world2.cpp  world3.cpp  world3widget.cpp
src/render/src/: CMakeLists.in.txt  CMakeLists.txt  MeshCompiler.cpp  MeshCompiler.hpp  MeshCompiler_ImmediateMode.cpp  MeshCompiler_ImmediateMode.hpp  RenderArgs.cpp  actor.cpp  actordef.cpp  camera.cpp  compiledcamera.cpp  compiledmesh.cpp  dock.cpp  engine.cpp  fbo.cpp  light.cpp  lines.cpp  material.cpp  opengl_debug.hpp  part.cpp  poseable.cpp  render_src.cmake  renderlist.cpp  shader.cpp  shaderpool.cpp  size.cpp  texture2.cpp  texturepool2.cpp  uniform.cpp  utils.cpp  virtualdisplay.cpp  widget.cpp  world2.cpp  world3.cpp  world3widget.cpp  worldwith3.cpp  worldwithcameraboundobject3.cpp
src/render/src/fse/: Binder.cpp  BufferReference.cpp  CMakeLists.in.txt  CMakeLists.txt  Command.cpp  Command_BindBufferCommand.cpp  Command_Commands.cpp  Command_SetVec2Uniform.cpp  Linker.cpp  Pipeline.cpp  Provider.cpp  Provider_Providers.cpp  Provider_RenderFullscreenProvider.cpp  Provider_RenderWorldProvider.cpp  RenderArgs.cpp  Target.cpp  Target_BufferTarget.cpp  Target_FormTarget.cpp  Target_Targets.cpp  exceptions.cpp  renderfse_src.cmake
src/render/test/: CMakeLists.in.txt  CMakeLists.txt  TestRenderList.cpp  main.cpp  render_test.cmake
src/webserver/: main.cpp
(+118 files in other folders)
